<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/proImgCard"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            android:elevation="@dimen/_12sdp">

        <ImageView
            android:id="@+id/projectImage"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center_vertical"
            android:src="@color/deepBlue"
            />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/titlePro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_110sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/what_s_your_favourite_product"
            android:layout_marginTop="@dimen/_7sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/DescPro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_110sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/what_s_your_favourite_product"
            android:layout_marginTop="@dimen/_35sdp"
            android:textColor="@color/grey"
            android:textSize="@dimen/_7sdp"
            android:fontFamily="@font/poppins_regular"
            />

        <TextView
            android:id="@+id/learningOutcomePro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_11sdp"
            android:layout_marginStart="@dimen/_110sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/learning_outcome"
            android:layout_marginTop="@dimen/_70sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_8sdp"
            />

        <TextView
            android:id="@+id/learningOutDescPro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_110sdp"
            android:text="@string/learning_outcome_description"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_81sdp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_7sdp"
            />

        <TextView
            android:id="@+id/preRequisites"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_110sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/pre_requisites"
            android:layout_marginTop="@dimen/_110sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_8sdp"
            />

        <TextView
            android:id="@+id/preRequisitesDesc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_110sdp"
            android:text="@string/pre_requisites_description"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

         <TextView
             android:id="@+id/typeSelect"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_98sdp"
             android:text="@string/type_by"
             android:textSize="@dimen/_8sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:fontFamily="@font/poppins_regular"
             android:textColor="@color/black"
             android:textStyle="bold"
             />

        <androidx.cardview.widget.CardView
            android:id="@+id/profileDpCardView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:elevation="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_220sdp">

            <ImageView
                android:id="@+id/profileDp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@color/black"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nameOfAuthor"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_10sdp"
            android:text="@string/name"
            android:textSize="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/deepBlue"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_10sdp"
            android:text="@string/deepthought"
            android:textColor="@color/deepBlue"
            android:textSize="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"/>

           <Button
               android:id="@+id/exploreButton"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_21sdp"
               android:layout_marginTop="@dimen/_133sdp"
               android:layout_marginStart="@dimen/_25sdp"
               android:background="@drawable/buttondesign"
               app:backgroundTint="@color/deepBlue"
               android:text="@string/explore"
               android:textStyle="bold"
               android:fontFamily="@font/poppins_regular"
               android:textColor="@color/white"
               android:textSize="@dimen/_4sdp"
               android:textAllCaps="false"
               />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>